# local-ai-control-center

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: quality-gate.yml  release.yml
docs/: 00-introduction.md  01-architecture.md  01-overview.md  02-architecture.md  02-roadmap.md  03-development.md  05-roadmap.md  06-development.md  INDEX.md  README.md
docs/adr/: ADR-001-foundational-structure.md  ADR-002-core-configuration-and-run-identity.md  ADR-003-workspaces-and-boundary-enforcement.md  ADR-004-permissions.md  ADR-005-provider-abstraction.md  ADR-006-audit-log.md  ADR-007-execution-preview.md  ADR-008-execution-cycle.md  ADR-009-skills.md  ADR-010-command-line-interface.md  ADR-011-permission-sourcing.md  ADR-012-profiler.md
src/local_ai_control_center/: __init__.py  audit.py  cli.py  config.py  cycle.py  permissions.py  preview.py  profiler.py  provider.py  run.py  skill.py  workspace.py
tests/: test_audit.py  test_cli.py  test_config.py  test_cycle.py  test_package.py  test_permissions.py  test_preview.py  test_profiler.py  test_provider.py  test_run.py  test_skill.py  test_workspace.py
