[project]
name = "local-ai-control-center"
version = "0.0.1"
description = "A local-first framework for private, reproducible, auditable AI-assisted workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
local-ai-control-center = "local_ai_control_center:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
]

[tool.uv]
link-mode = "copy"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
