[project]
name = "local-ai-control-center"
version = "0.11.0"
description = "A local-first framework for private, reproducible, auditable AI-assisted workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psutil>=7.2.2",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.27.0",
]

[project.scripts]
lacc = "local_ai_control_center.cli:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "types-pyyaml>=6.0.12.20260518",
    "types-psutil>=7.2.2.20260518",
]

[tool.uv]
link-mode = "copy"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
